Pod_configurations/hello_world/helloworld-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
  namespace: helloworld # Obviously the first name for a deployment
  labels:
    app: helloworld
spec:
  replicas: 2 # Two instances
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: nginxdemos/hello # A simple hello world Nginx image
        ports:
        - containerPort: 80 # The application inside the container listens on port 80
